# WAI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  project.4coder  start_devenv.bat
cmake/: CompileOptions.cmake  DownloadPrebuilts.cmake  PlatformLinkLibs.cmake
data/calibrations/: calib_in_params.yml
examples/: CMakeLists.txt
examples/app-Demo-OrbExtractor/: CMakeLists.txt  fpl_orbextractor.cpp  wai_orb.cpp
examples/app-Demo-SLProject/GLFW/: AppDemoMainGLFW.cpp  CMakeLists.txt
examples/app-Demo-SLProject/iOS/app-Demo-iOS.xcodeproj/project.xcworkspace/xcuserdata/hudrima1.xcuserdatad/: UserInterfaceState.xcuserstate
examples/app-Demo-SLProject/source/: AppDemoGui.cpp
examples/app-Demo-WAI/: CMakeLists.txt
examples/app-Demo-WAI/GLFW/: AppDemoMainGLFW.cpp  CMakeLists.txt
examples/app-Demo-WAI/android/app/: CMakeLists.txt  build.gradle
examples/app-Demo-WAI/android/app/src/main/cpp/: AppDemoAndroidJNI.cpp
examples/app-Demo-WAI/android/app/src/main/java/ch/fhnw/comgr/: GLES3Camera2Service.java  GLES3Lib.java
examples/app-Demo-WAI/android/gradle/wrapper/: gradle-wrapper.properties
examples/app-Demo-WAI/source/: AppDemoCalibrationSceneView.cpp  AppDemoCalibrationSceneView.h  AppDemoGui.cpp  AppDemoGui.h  AppDemoGuiInfosDialog.cpp  AppDemoGuiInfosDialog.h  AppDemoGuiInfosMapNodeTransform.cpp  AppDemoGuiInfosMapNodeTransform.h  AppDemoGuiInfosTracking.cpp  AppDemoGuiInfosTracking.h  AppDemoGuiMapStorage.cpp  AppDemoGuiMapStorage.h  AppDemoGuiTrackedMapping.cpp  AppDemoGuiTrackedMapping.h  AppDemoGuiVideoStorage.cpp  AppDemoGuiVideoStorage.h  AppDemoLoad.cpp  AppWAI.cpp  AppWAI.h  AppWAIScene.cpp  AppWAIScene.h  AppWAISceneView.cpp  AppWAISceneView.h  AppWAISingleton.cpp  AppWAISingleton.h
examples/app-Demo-WAI/source/Gui/: AppDemoGui.cpp  AppDemoGuiMenu.cpp  AppDemoGuiPrefs.cpp  AppDemoGuiPrefs.h
examples/app-Demo-WAI/source/GuiPrefab/: AppDemoGuiAbout.cpp  AppDemoGuiAbout.h  AppDemoGuiInfosMapNodeTransform.cpp  AppDemoGuiInfosSensors.cpp  AppDemoGuiInfosTracking.cpp  AppDemoGuiMapStorage.cpp  AppDemoGuiProperties.cpp  AppDemoGuiSceneGraph.cpp  AppDemoGuiStatsDebugTiming.cpp  AppDemoGuiStatsTiming.cpp  AppDemoGuiStatsVideo.cpp  AppDemoGuiTrackedMapping.cpp  AppDemoGuiUIPrefs.cpp  AppDemoGuiVideoStorage.cpp
examples/source/: WAIAutoCalibration.cpp  WAIAutoCalibration.h  WAICalibration.cpp  WAICalibration.h  WAIFileSystem.cpp  WAIMapStorage.h
experimental/: CMakeLists.txt
experimental/DBoW2/demo/: demo.cpp
experimental/DBoW2/include/DBoW2/: FORB.h
experimental/DBoW2/src/: SURFextractor.cpp
experimental/FeatureDescriptor/: ExtractKeypoints.cpp  FeatureDescriptor.cpp  matching.cpp  matching.h  orb_descriptor.cpp  orb_descriptor.h  tools.cpp  tools.h
experimental/FeatureMatching/: CMakeLists.txt  ExtractKeypoints.cpp  ExtractKeypoints.h  FeatureMatching.cpp  app.h  convert.h  gui.cpp  gui_tools.cpp  gui_tools.h  matching.cpp  matching.h  orb_descriptor.cpp  tools.cpp  tools.h
experimental/Initialization/: CMakeLists.txt  sl_initializationTest.cpp
experimental/VirtualCamera/: VirtualCamera.cpp
experimental/VirtualCamera/data/: keypoints_0  keypoints_1  keypoints_2  keypoints_3  keypoints_4  keypoints_5  keypoints_6  keypoints_7  keypoints_8  keypoints_9  worldpoints_0  worldpoints_1  worldpoints_2  worldpoints_3  worldpoints_4  worldpoints_5  worldpoints_6  worldpoints_7  worldpoints_8  worldpoints_9
experimental/app-Demo-OrbExtractor/: fpl_orbextractor.cpp
lib-WAI/: CMakeLists.txt
lib-WAI/source/: WAI.cpp  WAI.h  WAIConverter.cpp  WAIFileSystem.cpp  WAIFileSystem.h  WAIFrame.cpp  WAIFrame.h  WAIHelper.cpp  WAIHelper.h  WAIInitializer.h  WAIInitializerOrbSlam.cpp  WAIInitializerOrbSlam.h  WAIInterface.cpp  WAIKeyFrame.cpp  WAIKeyFrame.h  WAIKeyFrameDB.cpp  WAIKeyFrameDB.h  WAIMap.h  WAIMapIO.cpp  WAIMapIO.h  WAIMapPoint.h  WAIMapStorage.cpp  WAIMapStorage.h  WAIMath.h  WAIMode.h  WAIModeAruco.cpp  WAIModeAruco.h  WAIModeOrbSlam2.cpp  WAIModeOrbSlam2.h  WAIModeOrbSlam2DataOriented.cpp  WAIModeOrbSlam2DataOriented.h  WAIOrbExtraction.cpp  WAIOrbExtraction.h  WAIOrbMatching.cpp  WAIOrbSlamInitialization.cpp  WAIOrbVocabulary.cpp  WAIOrbVocabulary.h  WAISensor.h  WAISensorCamera.cpp  WAISensorCamera.h  (+2 more)
lib-WAI/source/OrbSlam/: Initializer.cpp  Initializer.h  KPextractor.h  LocalMapping.cpp  LocalMapping.h  LoopClosing.cpp  ORBextractor.cpp  ORBextractor.h  ORBmatcher.cpp  ORBmatcher.h  Optimizer.h  PnPsolver.h  SURFextractor.cpp  SURFextractor.h  TILDEextractor.cpp  TILDEextractor.h
lib-WAI/source/OrbSlamDataOriented/: WAIOrbExtraction.cpp  WAIOrbExtraction.h  WAIOrbMatching.cpp
